# report-pending-trades

./: .clang-format  CMakeLists.txt  README.md  refmt.sh
api/: Structures.h  Structures.hpp
include/: PluginInterface.h  PluginInterface.hpp  ReportServerInterface.h  Structures.h  Utils.hpp
include/model/: ReportAccount.hpp  ReportCandle.hpp  ReportGroup.hpp  ReportLog.hpp  ReportSymbol.hpp  ReportTrade.hpp  ReportTradeEnums.hpp
src/: PluginInterface.cpp  Utils.cpp
src/structures/: ReportType.h
src/utils/: Utils.cpp  Utils.h  Utils.hpp
